--- a/service/pom.xml
+++ b/service/pom.xml
@@ -6,10 +6,17 @@
         <artifactId>multi-module</artifactId>
         <groupId>groupId</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
